// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@components/_base-grid renders its content 1`] = `
<div class="tableContainer">
  <table class="table">
    <thead>
      <tr>
        <!---->
        <th class="">
          Last Name
          <baseicon-stub name="up-arrow" width="12" height="12" color="#333333" classname="sortIcon" click="() => {}"></baseicon-stub>
        </th>
        <th class="">
          First Name
          <baseicon-stub name="up-arrow" width="12" height="12" color="#333333" classname="sortIcon" click="() => {}"></baseicon-stub>
        </th>
        <th class="">
          ID
          <baseicon-stub name="up-arrow" width="12" height="12" color="#333333" classname="sortIcon" click="() => {}"></baseicon-stub>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <!---->
        <td>CC</td>
        <td>CCC</td>
        <td>3</td>
      </tr>
      <tr>
        <!---->
        <td>DD</td>
        <td>DDD</td>
        <td>4</td>
      </tr>
    </tbody>
  </table>
  <div class="bottomSpace">
    <div class="total">
      Total:
      <strong>26</strong></div>
    <ul name="Pagination" class="pagination">
      <li class="pageItem"><a href="#" class="pageLink">
          <baseicon-stub name="left-arrow" width="12" height="12" color="#333333" click="() => {}"></baseicon-stub>
        </a></li>
      <li class="pageItem"><a href="#" class="pageLink">1</a></li>
      <li class="pageItem currentPage"><a href="#" class="pageLink">2</a></li>
      <li class="pageItem"><a href="#" class="pageLink">3</a></li>
      <li class="pageItem"><a href="#" class="pageLink">4</a></li>
      <li class="pageItem"><a href="#" class="pageLink">5</a></li>
      <li class="pageItem"><a href="#" class="pageLink">6</a></li>
      <li class="pageItem"><a href="#" class="pageLink">7</a></li>
      <li class="pageItem"><a class="pageLink">...</a></li>
      <li class="pageItem"><a href="#" class="pageLink">13</a></li>
      <li class="pageItem"><a href="#" class="pageLink">
          <baseicon-stub name="right-arrow" width="12" height="12" color="#333333" click="() => {}"></baseicon-stub>
        </a></li>
    </ul>
  </div>
</div>
`;

exports[`@components/_base-grid renders its content by click header 1`] = `
<div class="tableContainer">
  <table class="table">
    <thead>
      <tr>
        <!---->
        <th class="active">
          Last Name
          <baseicon-stub name="down-arrow" width="12" height="12" color="#333333" classname="sortIcon" click="() => {}"></baseicon-stub>
        </th>
        <th class="">
          First Name
          <baseicon-stub name="up-arrow" width="12" height="12" color="#333333" classname="sortIcon" click="() => {}"></baseicon-stub>
        </th>
        <th class="">
          ID
          <baseicon-stub name="up-arrow" width="12" height="12" color="#333333" classname="sortIcon" click="() => {}"></baseicon-stub>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <!---->
        <td>ZZ</td>
        <td>ZZZ</td>
        <td>26</td>
      </tr>
      <tr>
        <!---->
        <td>YY</td>
        <td>YYY</td>
        <td>25</td>
      </tr>
    </tbody>
  </table>
  <div class="bottomSpace">
    <div class="total">
      Total:
      <strong>26</strong></div>
    <ul name="Pagination" class="pagination">
      <!---->
      <li class="pageItem currentPage"><a href="#" class="pageLink">1</a></li>
      <li class="pageItem"><a href="#" class="pageLink">2</a></li>
      <li class="pageItem"><a href="#" class="pageLink">3</a></li>
      <li class="pageItem"><a href="#" class="pageLink">4</a></li>
      <li class="pageItem"><a href="#" class="pageLink">5</a></li>
      <li class="pageItem"><a href="#" class="pageLink">6</a></li>
      <li class="pageItem"><a href="#" class="pageLink">7</a></li>
      <li class="pageItem"><a class="pageLink">...</a></li>
      <li class="pageItem"><a href="#" class="pageLink">13</a></li>
      <li class="pageItem"><a href="#" class="pageLink">
          <baseicon-stub name="right-arrow" width="12" height="12" color="#333333" click="() => {}"></baseicon-stub>
        </a></li>
    </ul>
  </div>
</div>
`;

exports[`@components/_base-grid renders its content when filter by DD 1`] = `
<div class="tableContainer">
  <table class="table">
    <thead>
      <tr>
        <!---->
        <th class="">
          Last Name
          <baseicon-stub name="up-arrow" width="12" height="12" color="#333333" classname="sortIcon" click="() => {}"></baseicon-stub>
        </th>
        <th class="">
          First Name
          <baseicon-stub name="up-arrow" width="12" height="12" color="#333333" classname="sortIcon" click="() => {}"></baseicon-stub>
        </th>
        <th class="">
          ID
          <baseicon-stub name="up-arrow" width="12" height="12" color="#333333" classname="sortIcon" click="() => {}"></baseicon-stub>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <!---->
        <td>DD</td>
        <td>DDD</td>
        <td>4</td>
      </tr>
    </tbody>
  </table>
  <div class="bottomSpace">
    <div class="total">
      Total:
      <strong>1</strong></div>
    <ul name="Pagination" class="pagination">
      <!---->
      <li class="pageItem currentPage"><a href="#" class="pageLink">1</a></li>
      <!---->
    </ul>
  </div>
</div>
`;

exports[`@components/_base-grid renders its content when order by DESC sort by ID 1`] = `
<div class="tableContainer">
  <table class="table">
    <thead>
      <tr>
        <!---->
        <th class="">
          Last Name
          <baseicon-stub name="up-arrow" width="12" height="12" color="#333333" classname="sortIcon" click="() => {}"></baseicon-stub>
        </th>
        <th class="">
          First Name
          <baseicon-stub name="up-arrow" width="12" height="12" color="#333333" classname="sortIcon" click="() => {}"></baseicon-stub>
        </th>
        <th class="active">
          ID
          <baseicon-stub name="down-arrow" width="12" height="12" color="#333333" classname="sortIcon" click="() => {}"></baseicon-stub>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <!---->
        <td>ZZ</td>
        <td>ZZZ</td>
        <td>26</td>
      </tr>
      <tr>
        <!---->
        <td>YY</td>
        <td>YYY</td>
        <td>25</td>
      </tr>
    </tbody>
  </table>
  <div class="bottomSpace">
    <div class="total">
      Total:
      <strong>26</strong></div>
    <ul name="Pagination" class="pagination">
      <!---->
      <li class="pageItem currentPage"><a href="#" class="pageLink">1</a></li>
      <li class="pageItem"><a href="#" class="pageLink">2</a></li>
      <li class="pageItem"><a href="#" class="pageLink">3</a></li>
      <li class="pageItem"><a href="#" class="pageLink">4</a></li>
      <li class="pageItem"><a href="#" class="pageLink">5</a></li>
      <li class="pageItem"><a href="#" class="pageLink">6</a></li>
      <li class="pageItem"><a href="#" class="pageLink">7</a></li>
      <li class="pageItem"><a class="pageLink">...</a></li>
      <li class="pageItem"><a href="#" class="pageLink">13</a></li>
      <li class="pageItem"><a href="#" class="pageLink">
          <baseicon-stub name="right-arrow" width="12" height="12" color="#333333" click="() => {}"></baseicon-stub>
        </a></li>
    </ul>
  </div>
</div>
`;
